# summa1

./: Jenkinsfile  package-lock.json  package.json
python-wasm/: Dockerfile
rust-wasm/: Cargo.toml
rust-wasm/src/: converter.rs  image_processor.rs  lib.rs  main.rs  pdf_processor.rs  types.rs
src/: App.jsx
src/components/: DragAndDropFile.jsx
