[package]
name = "document-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
pdf-writer = "0.9"
lopdf = "0.32"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
bytes = "1.0"
futures-util = "0.3"
tempfile = "3.0"
zip = "0.6"

[lib]
crate-type = ["cdylib", "rlib"]